--- a/problems.tex
+++ b/problems.tex
@@ -31,5 +31,19 @@
 
 \textbf{Задача 1-1} Дано $n$ отрезков $[a[i]; b[i]]$ на прямой $(i = 1 \ldotp\ldotp n)$. Найти максимальное $k$, для которого существует точка прямой, покрытая $k$ отрезками (``максимальное число слоёв''). Число действий -- порядка $n \lg n$.
 
-\textbf{Задача 1-2} Дано $n$ точек на плоскости. Построить их выпуклую оболочку -- минимальную выпуклую фигуру, их содержащую. (Резиновое колечко, натянутое на вбитые в доску гвозди -- их выпуклая оболочка.) Число операций не более $n \lg n$.
+\textbf{Задача 1-2} Массив $A[1 \ldotp\ldotp n]$ называется унимодальным, если содержит возрастающую последовательность, за которой идёт убывающая последовательность. Т.е. существует индекс $m \in \{1, 2, \ldotp\ldotp n\}$ такой, что
+\begin{itemize}
+\item $A[i] < A[i+1]$ для всех $1 \leqslant i < m$, и
+\item $A[i] > A[i+1]$ для всех $m \leqslant i < n$
+\end{itemize}
+Здесь $A[m]$ -- локальный максимум, окружённый меньшими элементами ($A[m-1]$ и $A[m+1]$). Необходимо найти максимальный элемент унимодального массива $A[1 \ldotp\ldotp n]$ за $\lg n$ операций.
+
+\textbf{Задача 1-3} Дано $n$ точек на плоскости. Построить их выпуклую оболочку -- минимальную выпуклую фигуру, их содержащую. (Резиновое колечко, натянутое на вбитые в доску гвозди -- их выпуклая оболочка.) Число операций не более $n \lg n$.
+
+\section*{Раздел 1. Темы 1.3-4}
+
+\textbf{Упражнение 1-} Придумать способ моделирования очереди с помощью двух стеков (и фиксированного числа переменных типа T). При этом отработка $n$ операций с очередью (начатых, когда очередь была пуста) должна требовать порядка $n$ действий.
+
+\textbf{Упражнение 1-} Деком называют структуру, сочетающую очередь и стек: класть и забирать элементы можно с обоих концов. Как реализовать дек ограниченного размера на базе массива так, чтобы каждая операция требовала константного числа действий?
+
 \end{document}
