--- a/syllabus.tex
+++ b/syllabus.tex
@@ -1,61 +1,82 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
+\usepackage[T1]{fontenc}
 \usepackage{hyperref}
 
-\author{Олег Смирнов\\
-\texttt{oleg.smirnov@gmail.com}}
+\author{Александр Полозов, Олег Смирнов\\
+\texttt{polozov.alex@gmail.com}, \texttt{oleg.smirnov@gmail.com}}
 \date{\today}
 \title{Алгоритмы: построение и анализ -- программа курса}
 
 \begin{document}
 \maketitle
 \begin{abstract}
-Программа базируется на курсе ``6.046: Introduction to Algorithms'' Массачусетского
-технологического института\footnote{\href{http://goo.gl/jIOiq}
-{http://ocw.mit.edu/ ... /6-046j-introduction-to-algorithms-sma-5503-fall-2005}}, 
-на одноимённом учебнике Т. Кормена, Ч Лейзерсона, Р. Ривеста и К. Штайна, а также
-учебниках ``Фундаментальные алгоритмы на C++'' Р. Седжвика и ``Программирование: теоремы
-и задачи'' А. Шеня.
+Программа базируется на курсе ``6.046: Introduction to Algorithms'' 
+Массачусетского технологического института\footnote{\href{http://goo.gl/jIOiq}
+{http://ocw.mit.edu/ ... /6-046j-introduction-to-algorithms-sma-5503-fall-2005}},
+на одноимённом учебнике Т. Кормена, Ч Лейзерсона, Р. Ривеста и К. Штайна,
+а также учебниках ``Фундаментальные алгоритмы на C++'' Р. Седжвика и
+``Программирование: теоремы и задачи'' А. Шеня.
 \end{abstract}
-\section*{Раздел 1. Анализ алгоритмов}
+\section*{I семестр}
+\subsection*{Модуль 1. Анализ алгоритмов}
 \begin{itemize}
-\item Тема 1.1. Анализ алгоритмов. Сортировка вставкой (Insertion sort) и сортировка слиянием (Merge sort). Бинарный поиск
-\item Тема 1.2. Асимптотическая нотация. Анализ рекуррентные соотношений. Основная теорема
-\item Тема 1.3. Парадигма ``Разделяй и властвуй''. Быстрое возведение в степень. Числа Фибоначчи. Алгоритм Евклида
-\item Тема 1.4. Стеки и очереди. Дерево отрезков. Корневая эвристика
-\item Тема 1.5. Пирамидальная сортировка (Heapsort). Очереди с приоритетами
-\item Тема 1.6. Сортировка Quicksort. Рандомизированные алгоритмы
-\item Тема 1.7. Сортировка за линейное время. Сортировка подсчётом (Counting sort). Поразрядная сортировка (Radix sort)
+\item Тема 1.1. Обзор курса. Анализ алгоритмов. Сортировка вставкой
+(Insertion sort) и сортировка слиянием (Merge sort). Бинарный поиск
+\item Тема 1.2. Асимптотическая нотация. Анализ рекуррентные соотношений.
+Основная теорема
+\item Тема 1.3. Парадигма ``Разделяй и властвуй''. Быстрое возведение в степень.
+Числа Фибоначчи. Алгоритм Евклида
+\item Тема 1.4. Стеки и очереди. Пирамидальная сортировка (Heapsort).
+Очереди с приоритетами
+\item Тема 1.5. Сортировка Quicksort. Рандомизированные алгоритмы
+\item Тема 1.6. Сортировка за линейное время. Сортировка подсчётом
+(Counting sort). Поразрядная сортировка (Radix sort)
+\item Тема 1.7. Хэширование и хэш-функции. Идеальное хэширование
 \end{itemize}
-\section*{Раздел 2. Разработка алгоритмов}
+
+\section*{Модуль 2. Построение алгоритмов}
 \begin{itemize}
-\item Тема 2.1. Хэширование. Хэш-функции. Идеальное хэширование
-\item Тема 2.2. Двоичные поисковые деревья. Обход дерева и варианты записи дерева. Связь с Quicksort
-\item Тема 2.3. Сбалансированные деревья. Пример реализации вставки в AVL
-\item Тема 2.4. Декартово дерево (Treap)
-\item Тема 2.5. Амортизационный анализ. Реализация динамических таблиц (Vector) и cистемы непересекающихся множеств (Disjoint-set)
-\item Тема 2.6. Задача минимума на отрезке (RMQ) и решение корневой декомпозицией. Offline и online версии.
-\item Тема 2.7. Задача наименьшего общего предка (LCA). Сведение LCA к RMQ
-\item Тема 2.8. Динамическое программирование I. Задача поиска наибольшей общей подстроки (LCS)
-\item Тема 2.9. Динамическое программирование II. Задача о ранце и о покрытии шахматной доски
+\item Тема 2.1. Динамическое программирование I. Задача поиска наибольшей
+общей подстроки (LCS), задача о кратчайшем двунаправленном пути, задача о
+наибольшей возрастающей подпоследовательности (LIS), задача о выдаче сдачи
+\item Тема 2.2. Динамическое программирование II. Задача о ранце, задача о
+покрытии шахматной доски
+\item Тема 2.3. Двоичные поисковые деревья. Обход дерева и варианты записи
+дерева. Связь с Quicksort
+\item Тема 2.4. Амортизационный анализ. Реализация динамических таблиц
+(Vector) и cистемы непересекающихся множеств (Disjoint-set)
+\item Тема 2.5. Графы. Варианты записи графа. Поиск циклов. Поиск в ширину
+(BFS), в глубину (DFS) и топологическая сортировка. Связность графа. Двудольный
+граф
+\item Тема 2.6. Жадные алгоритмы. Задача минимального остова (MST). Алгоритм
+Прайма. Алгоритм Краскала
+\item Тема 2.7. Кратчайшие пути I. Свойства и применение. Алгоритм Дейкстры
+\item Тема 2.8. Кратчайшие пути II. Алгоритм Беллмана-Форда. Задача разностных
+ограничений
+\item Тема 2.9. Кратчайшие пути III. Все пары вершин. Алгоритм Флойда-Уоршолла.
+Алгоритм Джонсона. Транзитивное замыкание
 \end{itemize}
-\section*{Раздел 3. Алгоритмы на графах}
+
+\section*{II семестр}
+\subsection*{Модуль 3. Дополнительные темы}
 \begin{itemize}
-\item Тема 3.1. Графы. Варианты записи графа. Поиск циклов. Поиск в ширину (BFS), в глубину (DFS) и топологическая сортировка. Двудольный граф.
-\item Тема 3.2. Жадные алгоритмы. Задача минимального остова (MST). Алгоритм Прайма. Алгоритм Краскала
-\item Тема 3.3. Кратчайшие пути I. Свойства и применение. Алгоритм Дейкстры
-\item Тема 3.4. Кратчайшие пути II. Алгоритм Беллмана-Форда. Задача разностных ограничений
-\item Тема 3.5. Кратчайшие пути III. Все пары вершин. Алгоритм Флойда-Уоршолла
-\item Тема 3.6. Алгоритм Джонсона. Связность графа
-\item Тема 3.7. Порядковые статистики. Динамические порядковые статистики
-\end{itemize}
-\section*{Раздел 4. Дополнительные темы}
-\begin{itemize}
-\item Тема 4.1. Вычислительная геометрия I. Векторное представление. Выпуклая оболочка. Метод заметания
-\item Тема 4.2. Вычислительная геометрия II. Точка в полигоне. Площадь полигона
-\item Тема 4.3. Строковые алгоритмы I. Префикс-функция. Z-функция. Хэширование
-\item Тема 4.4. Строковые алгоритмы II. Бор. Алгоритм Рабина-Карпа
-\item Тема 4.5. Максимальные поток и минимальный разрез. Алгоритм Форда-Фалкенсона. Парасочетания
+\item Тема 3.1. Задача минимума на отрезке (RMQ) и решение корневой
+декомпозицией. Дерево отрезков
+\item Тема 3.1. Offline и online версии задачи RMQ. Задача SRMQ
+\item Тема 3.2. Задача наименьшего общего предка (LCA). Сведение LCA к RMQ
+\item Тема 3.3. Сбалансированные деревья. Пример реализации вставки в AVL
+\item Тема 3.4. Декартово дерево (Treap)
+\item Тема 3.5. Порядковые статистики. Динамические порядковые статистики
+\item Тема 3.6. Конкурентый анализ на примере самоупорядочивающихся списков
+\item Тема 3.7. Вычислительная геометрия I. Векторное представление. Выпуклая 
+оболочка
+\item Тема 3.8. Вычислительная геометрия II. Точка в полигоне. Площадь 
+полигона. Метод заметания.
+\item Тема 3.9. Строковые алгоритмы I. Префикс-функция. Z-функция. Хэширование
+\item Тема 3.10. Строковые алгоритмы II. Бор. Алгоритм Рабина-Карпа
+\item Тема 3.11. Максимальные поток и минимальный разрез. Алгоритм 
+Форда-Фалкерсона. Паросочетания
 \end{itemize}
 \end{document}
