Add Euclid algorithm to lecture3

--- a/lecture3.tex
+++ b/lecture3.tex
@@ -322,25 +322,66 @@ C &= A \cdot B
 Решение оказалось точно таким же, как и оригинальное.
 
 \section{Алгоритм Евклида}
+Наибольший общий делитель (НОД) двух числе $m$ и $n$ обычно обозначается как
+\begin{equation*}
+  gcd(m, n)
+\end{equation*}
+Если $gcd(m, n) = 1$, то числа $m$ и $n$ называются \emph{взаимно простыми}.
+Кроме того, $gcd(n, 0) = n$ для любого $n > 0$.
 
-%% int gcd (int a, int b, int & x, int & y) {
-%%   if (a == 0) {
-%%     x = 0; y = 1;
-%%     return b;
-%%     }
-%%   int x1, y1;
-%%   int d = gcd (b%a, a, x1, y1);
-%%   x = y1 - (b / a) * x1;
-%%   y = x1;
-%%   return d;
-%% }
+Первый из известных алгоритмов нахождения НОД описан Евклидом в книге 
+``Начала'' (около 300 г. до н.э.). Он записывается рекурсивной формулой:
+\begin{codebox}
+\Procname{$\proc{Euclid}(a, b)$}
+  \li \If $b = 0$
+  \li \Then \Return $a$
+  \li \Else \Return $Euclid(b, a \bmod b)$
+      \End
+\end{codebox}
+
+Работа этого рекурсивного алгоритма не может продолжаться до бесконечности,
+т.к. второй аргумент функции всегда строго убывает, и он всегда неотрицательный.
+Таким образом, результатом всегда будет правильный ответ.
+
+Существует другой метод поиска НОД, где операции умножения и деления заменены
+операциями бинарного сдвига. Этот метод обычно работает быстрее, т.к. сдвиг
+намного дешевле других операций. Алгоритм бинарного НОД был известен ещё в
+Китае в первом веке н.э. но опубликован был лишь в 1967 году израильским 
+программистом Джозефом Стайном. Метод использует следующие свойства НОД:
+
+\begin{enumerate}
+\item $gcd(0, n) = n$; $gcd(m, 0) = m$; $gcd(m, m) = m$ -- по определению gcd
+\item $gcd(1, n) = 1$; $gcd(m, 1) = 1$
+\item Если $m$, $n$ чётные, то $gcd(m, n) = 2*gcd(m/2, n/2)$, т.к. 2 -- общий 
+  делитель
+\item Если $m$ чётное, $n$ нечётное, то $gcd(m, n) = gcd(m/2, n)$, т.к. 2 -- не
+  общий делитель
+\item Если $n$ чётное, $m$ нечётное, то $gcd(m, n) = gcd(m, n/2)$
+\item Если $m$, $n$ нечётные и $n > m$, то $gcd(m, n) = gcd((n - m)/2, m)$ -- 
+  комбинация из одного шага простого алгоритма Евклида (вычитания) и шагов 4-5
+  бинарного алгоритма
+\item Если $m$, $n$ нечётные и $n < m$, то $gcd(m, n) = gcd((m - n)/2, n)$
+\end{enumerate}
+
+Шаги повторяются, пока не будет $m = n$, а затем ещё раз, пока $n = 0$.
+Определение алгоритма рекурсивно, но это хвостовая рекурсия, а значит её
+можно заменить итерацией.
+
+Время работы алгоритма $O(\log^2 m n)$ т.е. пропорционально квадрату
+количества бит $m$ и $n$ вместе.
+
+Существуют расширенные версии обоих вариантов алгоритмов, которые параллельно с
+НОД вычисляют полезные константы $a$ и $b$, где
+\begin{equation*}
+  a m + b n = gcd(a, b)
+\end{equation*}
 
 \section*{Заключение}
 \begin{itemize}
 \item ``Разделяй и властвуй'' -- одна из нескольких мощных техник для разработки
   алгоритмов
 \item Оценка времени выполнения этих алгоритмов сводится к рекуррентностям,
-  которые легко решаются Основной теоремой
+  которые легко решаются основной теоремой
 \item Стратегия ``Разделяй и властвуй'' часто позволяет получить весьма
   эффективные алгоритмы
 \end{itemize}
