Add a few clarification to Euclid algorithm

--- a/lecture3.tex
+++ b/lecture3.tex
@@ -332,12 +332,17 @@ C &= A \cdot B
 Первый из известных алгоритмов нахождения НОД описан Евклидом в книге 
 ``Начала'' (около 300 г. до н.э.). Он записывается рекурсивной формулой:
 \begin{codebox}
-\Procname{$\proc{Euclid}(a, b)$}
-  \li \If $b = 0$
-  \li \Then \Return $a$
-  \li \Else \Return $Euclid(b, a \bmod b)$
+\Procname{$\proc{Euclid}(m, n)$}
+  \li \If $n = 0$
+  \li \Then \Return $m$
+  \li \Else \Return $Euclid(n, m \bmod n)$
       \End
 \end{codebox}
+
+Идея заключается в том, что НОД двух чисел не изменится, если из большего числа
+вычесть меньшее. Т.е. если $21$ -- НОД $252$ и $105$, то $205-105 = 147$ и
+$21$ по-прежнему является НОД $147$ и $105$. Остаток от последовательного 
+вычитания второго аргумента из первого и выражается формулой $m \bmod n$.
 
 Работа этого рекурсивного алгоритма не может продолжаться до бесконечности,
 т.к. второй аргумент функции всегда строго убывает, и он всегда неотрицательный.
@@ -346,19 +351,18 @@ C &= A \cdot B
 Существует другой метод поиска НОД, где операции умножения и деления заменены
 операциями бинарного сдвига. Этот метод обычно работает быстрее, т.к. сдвиг
 намного дешевле других операций. Алгоритм бинарного НОД был известен ещё в
-Китае в первом веке н.э. но опубликован был лишь в 1967 году израильским 
+Китае в первом веке н.э., но опубликован был лишь в 1967 году израильским 
 программистом Джозефом Стайном. Метод использует следующие свойства НОД:
 
 \begin{enumerate}
 \item $gcd(0, n) = n$; $gcd(m, 0) = m$; $gcd(m, m) = m$ -- по определению gcd
-\item $gcd(1, n) = 1$; $gcd(m, 1) = 1$
 \item Если $m$, $n$ чётные, то $gcd(m, n) = 2*gcd(m/2, n/2)$, т.к. 2 -- общий 
   делитель
 \item Если $m$ чётное, $n$ нечётное, то $gcd(m, n) = gcd(m/2, n)$, т.к. 2 -- не
   общий делитель
 \item Если $n$ чётное, $m$ нечётное, то $gcd(m, n) = gcd(m, n/2)$
 \item Если $m$, $n$ нечётные и $n > m$, то $gcd(m, n) = gcd((n - m)/2, m)$ -- 
-  комбинация из одного шага простого алгоритма Евклида (вычитания) и шагов 4-5
+  комбинация из одного шага простого алгоритма Евклида (вычитания) и шагов 3-4
   бинарного алгоритма
 \item Если $m$, $n$ нечётные и $n < m$, то $gcd(m, n) = gcd((m - n)/2, n)$
 \end{enumerate}
@@ -375,6 +379,10 @@ C &= A \cdot B
 \begin{equation*}
   a m + b n = gcd(a, b)
 \end{equation*}
+
+Наибольший общий делитель двух чисел имеет ряд важных применений в криптографии
+с открытым ключём, в решении Диофантовых уравнений и в ряде других задач
+теории чисел.
 
 \section*{Заключение}
 \begin{itemize}
