Fix multiple typo

--- a/lecture2.tex
+++ b/lecture2.tex
@@ -66,7 +66,7 @@ $O(g(n))$ можно рассматривать как множество фун
 
 \subsection{$\Omega$-обозначения}
 
-Для определения \emph{асимптотическую нижней границы} есть $\Omega$-обозначение:
+Для определения \emph{асимптотической нижней границы} есть $\Omega$-обозначение:
 \begin{equation*}
   \Omega(g(n)) = \{f(n): \exists c, n_0 > 0 \text{ такие, что }
   0 \leqslant c g(n) \leqslant f(n), \forall n > n_0
@@ -106,7 +106,7 @@ $o$- и $\omega$-обозначения являются версиями опр
   \}
 \end{equation*}
 
-Функция $f(n)$ пренебрежима мала по сравнению с функцией $g(n)$ при $n$
+Функция $f(n)$ пренебрежимо мала по сравнению с функцией $g(n)$ при $n$
 стремящемся к бесконечности, т.е.: 
 \begin{equation*}
   \lim_{n\to\infty}\frac{f(n)}{g(n)} = 0
@@ -214,7 +214,7 @@ $o$- и $\omega$-обозначения являются версиями опр
   \leqslant c n^3
 \end{align*}
 
-Неравнство выполняется, когда ``остаточная часть'' $(c/2)n^3 -n$ больше нуля,
+Неравенство выполняется, когда ``остаточная часть'' $(c/2)n^3 -n$ больше нуля,
 т.е. для любой константы $c \geqslant 2$ и $n \geqslant 1$.
 
 Доказательство базового случая:
@@ -262,7 +262,7 @@ $o$- и $\omega$-обозначения являются версиями опр
 \section{Метод деревьев рекурсии}
 \begin{itemize}
 \item изображается дерево, в узлах которого находится время, требуемое для
-  выполнения данной позадачи
+  выполнения данной подзадачи
 \item значение времени суммируется в пределах уровня, затем -- по всем
   уровням дерева
 \item подходит для получения ``догадки'' о виде решения для метода подстановок
@@ -273,10 +273,10 @@ $o$- и $\omega$-обозначения являются версиями опр
   T(n) = T(n/4) + T(n/2) + n^2 
 \end{equation*}
 
-Для задачи размером $n$, на каждом шаге рекурсивно решается задача размером
+Для задачи размером $n$ на каждом шаге рекурсивно решается задача размером
 $n/4$ и $n/2$. Нерекурсивная часть выполняется за $n^2$ итераций.
 
-После построения дерева (см. рис. \ref{fig:rectree1} - \ref{fig:rectree6}),
+После построения дерева (см. рис. \ref{fig:rectree1} - \ref{fig:rectree6})
 ответом будет сумма геометрической прогрессии
 $n^2(1+5/6 + (5/6)^2 + (5/6)^3 + ...) = \Theta(n^2)$
 
@@ -311,16 +311,16 @@ $n^{\log_b a}$ и рассматриваются три случая. Интуи
 \item Если $f(n) = \Omega(n^{\log_{b}{a + \epsilon}})$ , для некоторой
   константы $\epsilon > 0$, т.е. $f(n)$ растет полиноминально быстрей чем
   $n^{log_b a}$ в $n^\epsilon$ раз \\
-  \emph{и} $f(n)$ удовлетворяет неравнеству $a f(n/b) \leqslant c f(n)$ для
+  \emph{и} $f(n)$ удовлетворяет неравенству $a f(n/b) \leqslant c f(n)$ для
   некоторого $c < 1$\\Тогда $T(n) = \Theta(f(n))$
 \end{enumerate}
 
 Важно понимать, что этими тремя случаями не исчерпываются все возможности
 поведения функции $f(n)$. Между случаями 1 и 2 есть промежуток, в котором 
-функция $f(n)$ меньше функции $n^{\log_b a}$, но не полиномиально меньше.
+функция $f(n)$ меньше функции $n^{\log_b a}$, но не полиноминально меньше.
 Аналогичный промежуток имеется между случаями 2 и 3, когда функция $f(n)$ не
-полиномиально больше. Если функция $f(n)$ попадает в один из этих промежутков,
-или если для нее не выполняется условие регулярности из случая 3, основной
+полиноминально больше. Если функция $f(n)$ попадает в один из этих промежутков
+или, если для нее не выполняется условие регулярности из случая 3, основной
 метод неприменим.
 
 \subsection{Примеры решения}
