Fix typos in lecture5

--- a/lecture5.tex
+++ b/lecture5.tex
@@ -35,9 +35,9 @@
 вычислений} -- то есть того, что разрешено делать с элементами.
 
 Сортировка вставкой, сортировка слиянием (Merge sort) и сортировка Хоара
-(quicksort) являются примерами сортировки сравнениями, т.е. когда сравнения
-используются чтобы определить относительный порядок элементов. Лучшим
-результатом, которого пока удалось достичь, является $O(n \log n)$. Эту границу
+(quicksort) являются примерами сортировки сравнениями, т.е., когда сравнения
+используются, чтобы определить относительный порядок элементов. Наилучшим
+результатом, который пока удалось достичь, является $O(n \log n)$. Эту границу
 можно доказать с помощью \emph{деревьев решений}.
 
 \section{Деревья решений}
@@ -45,14 +45,14 @@
 
 Запишем алгоритм не в обычной текстовой форме, а в виде дерева. Для того, чтобы
 определить порядок элементов, мы сравниваем их. Внутренние узлы дерева, 
-помеченные как $i:j$ представляют собой сравнение двух элементов: $a_i, a_j$:
+помеченные как $i:j$, представляют собой сравнение двух элементов -- $a_i, a_j$:
 \begin{itemize}
 \item Eсли $a_i \leqslant a_j$, то выполнение идёт по левой ветке.
-\item Eсли $a_i > a_j$. то по правой.
+\item Eсли $a_i > a_j$, то по правой.
 \end{itemize}
 
 В листьях дерева находятся перестановки $\langle \pi(1), \pi(2), \ldots \pi(n)
-\rangle $, такие что
+\rangle $, такие, что
 \begin{equation*}
   a_{\pi(1)} \leqslant a_{\pi(2)} \leqslant \ldots \leqslant a_{\pi(n)}  
 \end{equation*}
@@ -66,18 +66,18 @@
 \item Одно дерево для каждого размера входных данных -- $n$.
 \item Можно рассматривать алгоритмы как набор сравнений, причём каждое сравнение
   -- это очередное ветвление дерева.
-\item Дерево содержит все возможные варианты выполнения алгоритма
+\item Дерево содержит все возможные варианты выполнения алгоритма.
 \item Время выполнения алгоритма = длина выбранного пути от корня до листа с
   финальной перестановкой-решением.
 \item Наихудшее время выполнения = высота дерева.
 \end{itemize}
 
 С помощью этой модели можно доказать следующую теорему: любое дерево решений,
-сортирующее $n$ элементов имеет высоту $\Omega(n \lg n)$.
+сортирующее $n$ элементов, имеет высоту $\Omega(n \lg n)$.
 
 Доказательство: обозначим количество листьев дерева как $l$. Поскольку дерево
-должно уметь сортировать все возможные варианты входных данных в нём должно быть
-как минимум $n!$ листьев, отсюда неравенство $l \geqslant n!$. Тем не менее
+должно уметь сортировать все возможные варианты входных данных, в нём должно быть
+как минимум $n!$ листьев, отсюда неравенство $l \geqslant n!$. Тем не менее,
 поскольку дерево бинарное, количество его листьев ограничивается $2^h$, где $h$
 -- высота дерева, т.е. $l \leqslant 2^h$. Из этих двух неравенств получаем
 третье: $2^h \geqslant n!$
@@ -100,11 +100,12 @@
 
 Вспомогательный массив: $C[1 \ldots k]$
 
-Идея состоит в подсчёте количества элементов, меньших чем заданный и последующем
-выборе места для элемента на основе этих данных. Например если известно, что 15
-элементов меньше рассматриваемого элемента, то очевидно, что его место в
-отсортированном массиве будет равно 16. Однако в массиве может быть несколько
-одинаковых элементов, потому необходимо несколько модифицировать алгоритм.
+Идея состоит в подсчёте количества элементов, меньших, чем заданный, и
+последующем выборе места для элемента на основании этих данных. Например, если
+известно, что 15 элементов меньше рассматриваемого элемента, то очевидно, что
+его место в отсортированном массиве будет равно 16. Однако в массиве может быть
+несколько одинаковых элементов, потому необходимо несколько модифицировать
+алгоритм.
 
 \begin{codebox}
 \li \For $i \gets 1 $ \To $k$
@@ -120,7 +121,7 @@
 \end{codebox}
 
 В первом цикле обнуляется массив-счётчик, во втором цикле определяется
-количество вхождений каждого элемента. В третьем берутся префиксные суммы, то
+количество вхождений каждого элемента. В третьем -- берутся префиксные суммы, то
 есть определяется количество элементов меньших или равных заданному. В четвёртом
 цикле происходит расстановка элементов по местам согласно значению массива-счётчика.
 
@@ -138,14 +139,14 @@ $O(n+k)$.
 Важное свойство сортировки подсчётом: стабильность.
 
 Стабильность сортировки означает, что она сохраняет относительный порядок равных
-элементов. Это важно к примеру для использования сортировки подсчётом в
+элементов. Это важно, к примеру, для использования сортировки подсчётом в
 поразрядной сортировке.
 
 \section{Поразрядная сортировка (Radix sort)}
 
 \subsection{Идея}
 Алгоритм был предложен Германом Холлеритом для переписи населения в США в 
-1890-м году, т.о. является чуть ли самой старой имплементацией сортировки.
+1890-м году, т.о. является чуть ли не самой старой имплементацией сортировки.
 
 Сортировались перфокарты (размером 80 на 16). Нужно было отсортировать каждый
 столбец.
@@ -155,7 +156,7 @@ $O(n+k)$.
 продолжать сортировку в них, снова разбивая и т.д. Тяжело поддерживать сразу
 много контейнеров.
 
-Хорошая идея: сортировать по младшей цифре, использую стабильную сортировку как
+Хорошая идея: сортировать по младшей цифре, используя стабильную сортировку как
 подпрограмму, тогда можно обойтись только одним контейнером.
 
 \includegraphics[width=4in]{lecture5/radix-example.eps}
@@ -173,7 +174,7 @@ $O(n+k)$.
 \begin{itemize}
 \item Они равны. Тогда поскольку наша вспомогательная сортировка стабильна --
   мы сохраним порядок. А по гипотезе индукции предыдущие цифры уже были
-  отсортированы. Потому в итоге получим что наши числа окажутся в правильном
+  отсортированы. Потому в итоге получим, что наши числа окажутся в правильном
   порядке.
 \item Они неравны. Тогда наша сортировка расставит числа в правильном порядке,
   поскольку значение числа определяется его старшей цифрой, которую мы как раз и
@@ -181,7 +182,7 @@ $O(n+k)$.
 \end{itemize}
 
 \subsection{Анализ}
-Будем использовать в качестве вспомогательной стабильной сортировки --
+Будем использовать в качестве вспомогательной стабильной сортировки
 сортировку подсчётом.
 
 Предположим, что нам нужно отсортировать $n$ чисел, каждое из которых состоит из
@@ -189,9 +190,9 @@ $b$ бит.
 
 Плохая идея работать с чисто битовым представлением, т.к. предположим, что наши
 числа находятся в диапозоне от $0$ до $n$ и их $n$, тогда двоичное представление
-таких чисел будет занимать $\lg n$ и соответственно нам надо будет пройтись по
+таких чисел будет занимать $\lg n$ и, соответственно, нам надо будет пройтись по
 ним $\lg n$ раз, то есть суммарное время выполнения будет $\mathcal{O}(n \lg
-n)$, что хуже линейнего.
+n)$, что хуже линейного.
 
 Но у нас есть контроль над размером ``цифры''. Можно сгруппировать биты в группы
 и назвать их ``цифрами''. Предположим, что мы группируем биты в группы по $r$
@@ -201,32 +202,32 @@ n)$, что хуже линейнего.
 Пример: 32-битное слово разбиваем на группы по 8 бит. Таким образом получаем
 $r=8, b/r=4$ прохода по цифрам в системе счисления с базой $2^8$
 
-Вопрос в том как оптимально разбить биты на группы.
+Вопрос в том, как оптимально разбить биты на группы.
 
 Вспомним, что сортировка подсчётом работает за $O(n+k)$ для чисел в диапазоне от
 0 до $k-1$. Если мы будем разбивать на группы по $r$, то максимально возможной 
-цифрой будет $2^r$ и время выполнения сортировки подсчётом будет $O(n + 2^r)$.
+цифрой будет $2^r$, и время выполнения сортировки подсчётом будет $O(n + 2^r)$.
 Количество проходов алгоритма же равно количеству ``цифр'', то есть $b/r$. То
 есть финальная оценка равна $T(n,b) = \Theta((b/r)(n+2^r))$
 
-Попробуем минимизировать $T(n,b)$ управляя $r$. Минимум можно найти с помощью
+Попробуем минимизировать $T(n,b)$, управляя $r$. Минимум можно найти с помощью
 дифферинцирования по $r$, но мы сделаем проще. Увеличение $r$ означает уменьшение
 количества проходов, однако в правом множителе $2^r$ растёт гораздо быстрее.
 
 Мы не хотим, чтобы $2^r >> n$, поэтому мы выбираем $r = \lg n$. Таким образом
 получается, что $T(n, b) = \Theta(bn/\lg n)$. Для чисел в диапазоне от 0 до
-$n^d - 1$ количество бит $b = d \lg n$, потому время выполнение будет равно
+$n^d - 1$ количество бит $b = d \lg n$, потому время выполнения будет равно
 $\Theta(dn)$.
 
 \section{Карманная сортировка (Bucket sort)}
 Если входные данные подчиняются равномерному закону распределения, то ожидаемое
-время алгоритмы карманной сортировки линейно зависит от количества входных
+время алгоритма карманной сортировки линейно зависит от количества входных
 элементов.
 
 Предположим, что необходимо отсортировать массив $A[1 \ldots n]$, все элементы
 которого равномерно распределены в интервале $[0, 1)$. Идея заключается в том,
 чтобы разбить интервал на $k$ одинаковых интервалов, или карманов (buckets), а
-затем распределить элементы между этим карманами. Если $k$ выбрано удачно и
+затем распределить элементы между этими карманами. Если $k$ выбрано удачно и
 элементы распределены равномерно, то в каждый карман попадёт не много элементов.
 Затем можно отсортировать содержимое каждого кармана за линейное время и
 объединить результаты в выходной массив.
@@ -251,7 +252,7 @@ $\Theta(dn)$.
 попадёт ровно по одному элементу, то алгоритм превратится в сортировку
 подсчётом. Если $k = 2$, а каждый из двух карманов затем сортируется рекурсивно,
 то алгоритм станет Quicksort-ом. Таким образом, карманную сортировку можно
-считать обобщёнием этих алгоритмов.
+считать обобщением этих алгоритмов.
 
 \end{document}
 
