Add LIS to lecture8

--- a/lecture8.tex
+++ b/lecture8.tex
@@ -13,7 +13,8 @@
 \author{Олег Смирнов\\
 \texttt{oleg.smirnov@gmail.com}}
 \date{24 ноября 2011 г.}
-\title{Построение и анализ алгоритмов -- Лекция 8. Динамическое программирование, часть 1}
+\title{Построение и анализ алгоритмов -- Лекция 8. Динамическое
+программирование, часть 1}
 
 \begin{document}
 
@@ -330,5 +331,39 @@ $p_{i-1} \times p_i$. Тогда элемент матрицы $m[i, j]$ -- ми
 что $1 \leqslant i_1 < i_2 < \ldots < \i_k < n$, причем $k$ -- наибольшее из
 возможных. Эта задача известна как LIS (англ. Longest Increasing Subsequence).
 
+Вычислим сначала длину наибольшей возрастающей подпоследовательности.
+
+Пусть в массиве $d[0 \ldots n-1]$ элемент $d[i]$ -- это длина наидлиннейшей
+возрастающей подпоследовательности, оканчивающейся в элементе с индексом $i$.
+Этот массив можно считать постепенно: сначала $d[0]$, затем $d[1]$ и т.д. В
+конце, ответ на задачу будет равен максимуму в этом массиве.
+
+Итак, пусть текущий индекс -- $i$, т.е. мы хотим посчитать значение $d[i]$, а
+все предыдущие значения $d[0 \ldots i-1]$ уже подсчитаны. Возможны два варианта:
+\begin{itemize}
+\item либо $d[i] = 1$, т.е. искомая подпоследовательность состоит только из
+  числа $a[i]$.
+\item либо $d[i] > 1$. Тогда перед числом $a[i]$ в искомой подпоследовательности
+  стоит какое-то другое число. Это может быть любой элемент
+  $a[j], j = 0 \ldots i-1$, такой, что $a[j] < a[i]$.
+\end{itemize}
+Пусть мы рассматриваем какой-то текущий индекс $j$. Поскольку элемент $d[j]$ для
+него уже подсчитан, то получается, что это число $a[j]$ вместе с числом $a[i]$
+даёт ответ $d[j] + 1$. Таким образом, $d[j]$ можно считать по такой формуле:
+\begin{equation*}
+  d[i] = max_{j=0 \ldots i-1, a[j] < a[i]} (d[j] + 1)
+\end{equation*}
+
+Объединяя эти два варианта в один, получаем окончательный алгоритм для
+вычисления длинны ответа:
+\begin{equation*}
+  d[i] = max(1, max_{j=0 \ldots i-1, a[j] < a[i]} (d[j] + 1))
+\end{equation*}
+
+Чтобы суметь восстановить ответ, помимо динамики $d$ надо также хранить
+вспомогательный массив $p[0 \ldots n-1]$ -- то, в каком месте достигся максимум
+для каждого значения $d[i]$. Иными словами, индекс $p[i]$ будет обозначать тот
+самый индекс $j$, при котором получилось наибольшее значение $d[i]$. Такой
+массив в динамическом программировании часто называют ``массивом предков''.
 \end{document}
 
