Fix typos in lecture 8 & 10

--- a/lecture10.tex
+++ b/lecture10.tex
@@ -67,7 +67,7 @@
 каждого узла $x$ которого выполняется следующее свойство:
 \begin{itemize}
 \item если узел $y$ лежит в левом поддереве узла $x$, то 
-  $key[y] \leqslant key[x]$;
+  $key[y] < key[x]$;
 \item если узел $y$ лежит в правом поддереве узла $x$, то
   $key[y] \geqslant key[x]$.
 \end{itemize}
@@ -101,10 +101,10 @@
 \item $\Omega(n \lg n)$ для Tree\_Insert в среднем и в лучшем случае (идеально
   сбалансированное бинарное дерево).
 \item $T = \sum_{x \in T} depth(x) = \Theta(n^2)$ для Tree\_Insert в худшем
-  случае (массиво уже отсортирован).
+  случае (массив уже отсортирован).
 \end{itemize}
 
-Поведение алгоритма похоже на поведение сортирвки Хоара -- Quicksort.
+Поведение алгоритма похоже на поведение сортировки Хоара -- Quicksort.
 
 \section{Бинарное поисковое дерево и сортировка Хоара}
 Алгоритмы BST sort и Quicksort выполняют одинаковое количество сравнений, но в
@@ -246,7 +246,7 @@ $k$ в дереве с корнем $x$ выполняется за время $
   \item Посетить узел.
   \end{enumerate}
   Такой обход используется в анализе игр с полной информацией и в динамическом
-  программирование.
+  программировании.
 \item Обход в ширину, когда узлы посещаются уровень за уровнем ($N$-й уровень
   дерева -- множество узлов с высотой $N$). Каждый уровень обходится слева
   направо. Для его реализации используется структура $queue$ (очередь).
@@ -294,8 +294,8 @@ $right[z] = NIL$ в дерево $T$:
 
 Если в дереве $T$ существуют два узла $a$ и $b$, $a < b$, такие, что
 $rank(a) = k$, $rank(b) = k+1$. Т.е. узел $b$ является последующим за $a$.
-Левым дочерним узлом узла $b$ может являтся только элемент $x < b$. Но из
-условия предшествия следует, что $x < a$ и $rank(x) < rank(a)$. Т.к. узлы
+Тогда левым дочерним узлом узла $b$ может являться только элемент $x < b$. Но
+из условия предшествия следует, что $x < a$ и $rank(x) < rank(a)$. Т.к. узлы
 $a$ и $b$ уже размещены в дереве, алгоритм Tree\_Insert поместит $x$ в
 левое поддерево элемента $a$, но не $b$.
 
@@ -333,5 +333,5 @@ $a$ и $b$ уже размещены в дереве, алгоритм Tree\_Ins
 Очевидно, что балансировку дерева можно нарушить, вставляя или удаляя специально
 подобранные элементы. Для борьбы с таким поведением существуют специальные
 структуры данных и соответствующие алгоритмы: красно-чёрные деревья, AVL-деревья,
-декарторвы деревья (Treap) и т.п.
+декартовы деревья (Treap) и т.п.
 \end{document}
